using UnityEngine;

public class AnimatorParameters
{
    public static readonly int IsSwimming = Animator.StringToHash("IsSwimming");
    public static readonly int IsIdle = Animator.StringToHash("IsIdle");
    public static readonly int IsInAir = Animator.StringToHash("IsInAir");
    public static readonly int IsDashing = Animator.StringToHash("IsDashing");
    public static readonly int IsTackling = Animator.StringToHash("IsTackling");
    public static readonly int IsUp = Animator.StringToHash("IsUp");
    public static readonly int IsDown = Animator.StringToHash("IsDown");
    public static readonly int IsGrabbing = Animator.StringToHash("IsGrabbing");
    public static readonly int IsRolling = Animator.StringToHash("IsRolling");
    public static readonly int IsLoadingShoot = Animator.StringToHash("IsLoadingShoot");
    public static readonly int IsTackled = Animator.StringToHash("IsTackled");
    public static readonly int IsShooting = Animator.StringToHash("IsShooting");
    public static readonly int IsHovering = Animator.StringToHash("IsHovering");
    public static readonly int IsLoadingKick = Animator.StringToHash("IsLoadingKick");
    
} 